tests/fixtures/pass/drop_closure_early_trap.sali
let Resource = struct(value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let trapped = 1 / self.value
  }
}

let consume(move value: Resource): () = ()

let main(): i32 = {
  let resource = Resource(0)
  let once = { (value: i32) -> do {
    consume(resource)
    value
  }}
  once(return 0)
}
