tests/fixtures/fail/vec_resource_use_after_push.sali
let Resource = struct(value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {}
}

let main(): i32 = {
  let mut values: Vec(Resource) = Vec(Resource).new()
  let resource = Resource(42)
  values.push(resource)
  resource.value
}
